// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Snapshot should render heading 1 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  color: #003865;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  line-height: 1.2;
  margin: 20px 0 10px;
  font-size: 2.8em;
}

.emotion-0:focus {
  border-bottom: 2px dotted #027EE1;
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

<div>
  <h1
    class="emotion-0"
    id="testId"
  >
    Heading 1
  </h1>
</div>
`;

exports[`Heading Snapshot should render heading 2 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  color: #003865;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  line-height: 1.2;
  margin: 20px 0 10px;
  font-size: 2.4em;
}

.emotion-0:focus {
  border-bottom: 2px dotted #027EE1;
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

<div>
  <h2
    class="emotion-0"
  >
    Heading 2
  </h2>
</div>
`;

exports[`Heading Snapshot should render heading 3 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  color: #003865;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  line-height: 1.2;
  margin: 20px 0 10px;
  font-size: 1.867em;
}

.emotion-0:focus {
  border-bottom: 2px dotted #027EE1;
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

<div>
  <h3
    class="emotion-0"
  >
    Heading 3
  </h3>
</div>
`;

exports[`Heading Snapshot should render heading 4 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  color: #003865;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  line-height: 1.2;
  margin: 20px 0 10px;
  font-size: 1.467em;
  font-weight: 400;
  line-height: 1.4;
}

.emotion-0:focus {
  border-bottom: 2px dotted #027EE1;
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

<div>
  <h4
    class="emotion-0"
  >
    Heading 4
  </h4>
</div>
`;

exports[`Heading Snapshot should render heading 5 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  color: #003865;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  line-height: 1.2;
  margin: 20px 0 10px;
  font-size: 1.067em;
  font-weight: 600;
  line-height: 1.4;
}

.emotion-0:focus {
  border-bottom: 2px dotted #027EE1;
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

<div>
  <h5
    class="emotion-0"
  >
    Heading 5
  </h5>
</div>
`;

exports[`Heading Snapshot should render heading 6 correctly 1`] = `
.emotion-0 {
  border-bottom: 2px solid transparent;
  color: #003865;
  font-family: "Open Sans",sans-serif;
  font-weight: 300;
  line-height: 1.2;
  margin: 20px 0 10px;
  font-size: 0.867em;
  font-weight: 700;
  line-height: 1.5;
}

.emotion-0:focus {
  border-bottom: 2px dotted #027EE1;
  outline: 0;
  -webkit-transition: border 0.1s linear;
  transition: border 0.1s linear;
}

<div>
  <h6
    class="emotion-0"
  >
    Heading 6
  </h6>
</div>
`;
